Bug 61417 - [Chromium] WebDatabase::closeDatabaseImmediately fails sometimes.
Summary: [Chromium] WebDatabase::closeDatabaseImmediately fails sometimes.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Michael Nordman
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-24 21:24 PDT by Michael Nordman
Modified: 2011-05-26 14:33 PDT (History)
3 users (show)

See Also:


Attachments
SimplerStringKey (9.82 KB, patch)
2011-05-24 21:28 PDT, Michael Nordman
webkit.review.bot: commit-queue-
Details | Formatted Diff | Diff
SimplerStringKey (8.83 KB, patch)
2011-05-25 12:50 PDT, Michael Nordman
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Nordman 2011-05-24 21:24:13 PDT
See the chromium bug for details.
http://code.google.com/p/chromium/issues/detail?id=83487
Comment 1 Michael Nordman 2011-05-24 21:28:30 PDT
Created attachment 94741 [details]
SimplerStringKey
Comment 2 WebKit Review Bot 2011-05-24 21:38:14 PDT
Comment on attachment 94741 [details]
SimplerStringKey

Attachment 94741 [details] did not pass chromium-ews (chromium-xvfb):
Output: http://queues.webkit.org/results/8733453
Comment 3 Michael Nordman 2011-05-24 23:09:26 PDT
Looks like the DEPs roll in the other direction hasn't happened yet (pulling a newer set of webkit_support stuff from chrome-land)

The callsite causing the compile error was altered to no longer use the deprecated method in r86537 (ealier today).
http://src.chromium.org/viewvc/chrome?view=rev&revision=86537
Comment 4 WebKit Review Bot 2011-05-24 23:19:44 PDT
Comment on attachment 94741 [details]
SimplerStringKey

Attachment 94741 [details] did not pass cr-mac-ews (chromium):
Output: http://queues.webkit.org/results/8726968
Comment 5 Michael Nordman 2011-05-25 12:50:52 PDT
Created attachment 94841 [details]
SimplerStringKey

leaving the deprecated method in for a little longer
Comment 6 Darin Fisher (:fishd, Google) 2011-05-25 13:03:27 PDT
Comment on attachment 94841 [details]
SimplerStringKey

View in context: https://bugs.webkit.org/attachment.cgi?id=94841&action=review

> Source/WebCore/storage/DatabaseTracker.h:181
> +    typedef HashMap<String, DatabaseNameMap*> DatabaseOriginMap;

I guess duplicating the above typedefs and the definition of m_openDatabaseMapGuard
is helpful since the type of DatabaseOriginMap is different now?  This way you can
keep all of these together?  Another approach would be to #ifdef just the definition
of DatabaseOriginMap.  Then, the rest of the code duplication would not need to exist.
Comment 7 Michael Nordman 2011-05-25 13:17:03 PDT
(In reply to comment #6)
> (From update of attachment 94841 [details])
> View in context: https://bugs.webkit.org/attachment.cgi?id=94841&action=review
> 
> > Source/WebCore/storage/DatabaseTracker.h:181
> > +    typedef HashMap<String, DatabaseNameMap*> DatabaseOriginMap;
> 
> I guess duplicating the above typedefs and the definition of m_openDatabaseMapGuard
> is helpful since the type of DatabaseOriginMap is different now?  This way you can
> keep all of these together?  Another approach would be to #ifdef just the definition
> of DatabaseOriginMap.  Then, the rest of the code duplication would not need to exist.

I chose to keep the typedefs and datamembers together for the sake of readability, but I'd be willing to chop it up differently. Aside from the .h file hygiene, wdyt?
Comment 8 WebKit Commit Bot 2011-05-25 20:44:57 PDT
The commit-queue encountered the following flaky tests while processing attachment 94841 [details]:

http/tests/xmlhttprequest/cross-origin-no-authorization.html bug 33357 (author: ap@webkit.org)
The commit-queue is continuing to process your patch.
Comment 9 WebKit Commit Bot 2011-05-25 20:46:15 PDT
Comment on attachment 94841 [details]
SimplerStringKey

Rejecting attachment 94841 [details] from commit-queue.

Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-7', 'land-a..." exit_code: 1

Last 500 characters of output:
erListBox.cpp
r87352 = 802dc9d1e34c714064594dc4bd0624b23fc04c8c (refs/remotes/trunk)
	M	ChangeLog
	M	Source/WebKit/chromium/src/GraphicsContext3DChromium.cpp
	M	Source/WebKit/chromium/public/WebGraphicsContext3D.h
	M	Source/WebCore/platform/graphics/GraphicsContext3D.h
	M	Source/WebCore/html/canvas/WebGLRenderingContext.cpp
r87353 = d0ac4bc7d41d88e8327c241a7200d3286d031cda (refs/remotes/trunk)
First, rewinding head to replay your work on top of it...
Fast-forwarded master to refs/remotes/trunk.

Full output: http://queues.webkit.org/results/8734624
Comment 10 Michael Nordman 2011-05-26 12:06:13 PDT
bah... got up to the point of being committed (built tests ran the whole deal) only to be rejected because the change log was missing a Reviewed By line :)

will land manually
Comment 11 Michael Nordman 2011-05-26 12:44:39 PDT
Committed r87419: <http://trac.webkit.org/changeset/87419>